fix: message body highlight bleed into date

--- a/project/source/page/css/style.css
+++ b/project/source/page/css/style.css
@@ -666,7 +666,7 @@ input.message-entry:disabled {
   font-size: smaller;
   background-color: rgba(0, 0, 0, 0.03);
   padding: 0.1em 0.5em;
-  margin: 0 0.5em;
+  margin-left: 0.25em;
   border-radius: 1em;
 }
 
